# ai-agent-python

./: .gitignore  README.md  pyproject.toml
doc/: sample.txt
src/ai_agent/: __init__.py
src/ai_agent/api/: __init__.py  main.py
src/ai_agent/api/routes/: __init__.py  chat.py
src/ai_agent/api/schemas/: __init__.py  chat.py  common.py
src/ai_agent/config/: __init__.py  settings.py
src/ai_agent/core/: __init__.py  agent.py  factory.py  graph.py
src/ai_agent/models/: __init__.py  cache.py  constants.py  db.py  model.py  prompts.py
src/ai_agent/models/domain/: __init__.py  message.py
src/ai_agent/modules/: __init__.py
src/ai_agent/modules/cache/: client.py  history.py
src/ai_agent/modules/db/: client.py  dao.py  models.py
src/ai_agent/modules/llm/: __init__.py  base.py  deepseek.py  factory.py
src/ai_agent/modules/memory/: __init__.py  store.py
src/ai_agent/modules/rag/: __init__.py  embedder.py  retriever.py  splitter.py  store.py
src/ai_agent/modules/tool/: __init__.py  base.py  registry.py  tools.py
src/ai_agent/utils/: __init__.py  email_sender.py  scraper.py  sse.py  stream.py
tests/: __init__.py  main.py
tests/test_api/: __init__.py
tests/test_core/: __init__.py  test_agent.py
tests/test_modules/: __init__.py  test_agent.py  test_deepseek.py  test_memory.py  test_rag.py
tests/test_utils/: __init__.py
