[project]
name = "ai-agent"
version = "1.0.0-dev"
description = "AGENT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.0",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = []
