[project]
name = "ai-agent"
version = "1.0.0-dev"
description = "AGENT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "langchain>=1.2.16",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-community>=0.4.1",
    "langchain-chroma>=0.2.6",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=1.1.0",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.4.1",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "pymilvus>=2.6.13",
    "langchain-milvus>=0.3.3",
]

[project.optional-dependencies]
dev = []
